[Qt] WebSocket errors should be logged to console https://bugs.webkit.org/show_bug.cgi?id=113842

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2013-04-04
Reviewed by Jocelyn Turcotte.

Source/WebCore:

Pass the reason of a failure to SocketStreamError instance
and notify it via SocketStreamHandleClient::didFailSocketStream().

Test : http/tests/inspector/console-websocket-error.html

* platform/network/qt/SocketStreamError.h:
(WebCore::SocketStreamError::SocketStreamError):
* platform/network/qt/SocketStreamHandleQt.cpp:
(WebCore::SocketStreamHandlePrivate::SocketStreamHandlePrivate):
(WebCore::SocketStreamHandlePrivate::socketErrorCallback):

LayoutTests:

* platform/qt/TestExpectations:
* platform/qt/http/tests/inspector/console-websocket-error-expected.txt: Added.

Canonical link: https://commits.webkit.org/132271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147618 268f45cc-cd09-0410-ab3c-d52691b4dbfc